--- a/src/app/add/check/check.component.html
+++ b/src/app/add/check/check.component.html
@@ -39,3 +39,22 @@
     </button>
   </ng-template>
 </div>
+<div class="panel">
+  <h2>
+    <span class="ti ti-certificate"></span>
+    About signatures
+  </h2>
+  <p>
+    Digital Covid Certificates are digitally signed. It means the QR Code contains data that
+    can prove that the certificate was delivered by a reliable and authorized entity.
+  </p>
+  <p>
+    <strong>This application does not verify the signature.</strong> Therefore it cannot be
+    used to make sure a certificate is valid, and you shouldn't import a QR Code that's not
+    coming from an official source.
+  </p>
+  <p>
+    To be able to display a valid QR Code when asked, the application store all the data of the
+    QR Code "as-is", with the signature included.
+  </p>
+</div>
