remove useless non-breaking space

--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="panel">
   <h2>
-    <span class="ti ti-apps"></span>&nbsp;
+    <span class="ti ti-apps"></span>
     <span>What is this website?</span>
   </h2>
   <p>
@@ -28,7 +28,7 @@
 </div>
 <div class="panel">
   <h2>
-    <span class="ti ti-report-medical"></span>&nbsp;
+    <span class="ti ti-report-medical"></span>
     <span>What is a DCC?</span>
   </h2>
   <p>
@@ -81,7 +81,7 @@
 </div>
 <div class="panel">
   <h2>
-    <span class="ti ti-apps"></span>&nbsp;
+    <span class="ti ti-apps"></span>
     <span>Why use this app?</span>
   </h2>
   <p>In some countries, the official application to use for storing the certificate is
@@ -92,7 +92,7 @@
 </div>
 <div class="panel">
   <h2>
-    <span class="ti ti-help"></span>&nbsp;
+    <span class="ti ti-help"></span>
     <span>Can I help?</span>
   </h2>
   <p>
@@ -107,7 +107,7 @@
 </div>
 <div class="panel">
   <h2>
-    <span class="ti ti-user"></span>&nbsp;
+    <span class="ti ti-user"></span>
     <span>Who are the authors?</span>
   </h2>
   <p>There is only me for now, <a href="https://benjaminchanudet.com">Benjamin Chanudet</a>.
@@ -118,7 +118,7 @@
 </div>
 <div class="panel">
   <h2>
-    <span class="ti ti-info-circle"></span>&nbsp;
+    <span class="ti ti-info-circle"></span>
     <span>Disclaimers</span>
   </h2>
   <p>
