--- a/src/app/shared/cert-details/cert-details.component.html
+++ b/src/app/shared/cert-details/cert-details.component.html
@@ -1,173 +1,188 @@
 <div *ngIf="cert">
   <h2>
     <span class="ti ti-user"></span>
-    Person
+    <span>Identity</span>
   </h2>
   <dl>
-    <dt>Firstname</dt>
-    <dd>{{cert.firstname}}</dd>
+    <dt>Forename(s)</dt>
+    <dd>
+      {{cert.forenames.formatted}}
+      <br><span class="raw">{{cert.forenames.raw}}</span>
+    </dd>
   </dl>
   <dl>
-    <dt>Lastname</dt>
-    <dd>{{cert.lastname}}</dd>
+    <dt>Lastname(s)</dt>
+    <dd>
+      {{cert.lastnames.formatted}}
+      <br><span class="raw">{{cert.lastnames.raw}}</span>
+    </dd>
   </dl>
   <dl>
     <dt>Date of Birth</dt>
-    <dd>{{cert.date_birth}}</dd>
+    <dd>
+      {{cert.date_birth | date:'longDate'}}
+      <br><span class="raw">{{cert.date_birth}}</span>
+    </dd>
   </dl>
-  <div [ngSwitch]="cert.type">
-    <ng-container *ngSwitchCase="'vaccine'">
-      <h2>
-        <span class="ti ti-vaccine"></span>
-        Vaccination Certificate
-      </h2>
-      <ng-container *ngIf="vaccine as vac">
+  <div *ngFor="let vac of cert.vaccines; index as i; count as l;">
+    <h2>
+      <span class="ti ti-vaccine"></span>
+      <span>Vaccination Certificate</span>
+      <span *ngIf="l > 1">({{i+1}}/{{l}})</span>
+    </h2>
         <dl>
-          <dt>Disease or agent targeted</dt>
-          <dd>{{vac.disease.formatted}}
-            <br><span class="raw">{{vac.disease.raw}}</span>
-          </dd>
-        </dl>
-        <dl>
-          <dt>Vaccine/Prophylaxis</dt>
-          <dd>{{vac.prophylaxis.formatted}}
-            <br><span class="raw">{{vac.prophylaxis.raw}}</span>
-          </dd>
-        </dl>
-        <dl>
-          <dt>Vaccine medicinal product</dt>
-          <dd>
-            {{vac.medicinal_product.formatted}}
-            <br><span class="raw">{{vac.medicinal_product.raw}}</span>
-          </dd>
-        </dl>
-        <dl>
-          <dt>Vaccine Marketing authorisation holder or manufacturer</dt>
-          <dd>
-            {{vac.manufacturer.formatted}}
-            <br><span class="raw">{{vac.manufacturer.raw}}</span>
-          </dd>
-        </dl>
-        <dl>
-          <dt>Number in a series of vaccinations/doses and the overall number of doses in the series</dt>
-          <dd>{{vac.number_total}}</dd>
-        </dl>
-        <dl>
-          <dt>Date of vaccination</dt>
-          <dd>{{vac.vaccinated_on}}</dd>
-        </dl>
-        <dl>
-          <dt>Country of Vaccination</dt>
-          <dd>
-            {{vac.country.formatted}}
-            <br><span class="raw">{{vac.country.raw}}</span>
-          </dd>
-        </dl>
-      </ng-container>
-    </ng-container>
-    <ng-container *ngSwitchCase="'test'">
-      <h2>
-        <span class="ti ti-test-pipe"></span>
-        Test Certificate
-      </h2>
-      <ng-container *ngIf="test as tst">
-        <dl>
-          <dt>Disease or agent targeted</dt>
-          <dd>{{tst.disease.formatted}}
-            <br><span class="raw">{{tst.disease.raw}}</span>
-          </dd>
-        </dl>
-        <dl>
-          <dt>Type of Test</dt>
-          <dd>{{tst.type.formatted}}
-            <br><span class="raw">{{tst.type.raw}}</span>
-          </dd>
-        </dl>
-        <dl>
-          <dt>NAA Test Name</dt>
-          <dd>{{tst.name}}
-          </dd>
-        </dl>
-        <dl>
-          <dt>RAT Test name and manufacturer</dt>
-          <dd>{{tst.manufacturer.formatted}}
-            <br><span class="raw">{{tst.manufacturer.raw}}</span>
-          </dd>
-        </dl>
-        <dl>
-          <dt>Date/Time of Sample Collection</dt>
-          <dd>
-            {{tst.collected_on}}
-          </dd>
-        </dl>
-        <dl>
-          <dt>Test Result</dt>
-          <dd>{{tst.result.formatted}}
-            <br><span class="raw">{{tst.result.raw}}</span>
-          </dd>
-        </dl>
-        <dl>
-          <dt>Testing center</dt>
-          <dd>
-            {{tst.testing_center}}
-          </dd>
-        </dl>
-        <dl>
-          <dt>Country of Test</dt>
-          <dd>
-            {{tst.country.formatted}}
-            <br><span class="raw">{{tst.country.raw}}</span>
-          </dd>
-        </dl>
-      </ng-container>
-    </ng-container>
-    <ng-container *ngSwitchCase="'recovery'">
+      <dt>Disease or agent targeted</dt>
+      <dd>{{vac.disease.formatted}}
+        <br><span class="raw">{{vac.disease.raw}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Vaccine/Prophylaxis</dt>
+      <dd>{{vac.prophylaxis.formatted}}
+        <br><span class="raw">{{vac.prophylaxis.raw}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Vaccine medicinal product</dt>
+      <dd>
+        {{vac.medicinal_product.formatted}}
+        <br><span class="raw">{{vac.medicinal_product.raw}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Vaccine Marketing authorisation holder or manufacturer</dt>
+      <dd>
+        {{vac.manufacturer.formatted}}
+        <br><span class="raw">{{vac.manufacturer.raw}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Number in a series of vaccinations/doses and the overall number of doses in the series</dt>
+      <dd>{{vac.number_total}}</dd>
+    </dl>
+    <dl>
+      <dt>Date of vaccination</dt>
+      <dd>
+        {{vac.vaccinated_on | date:'fullDate'}}
+        <br><span class="raw">{{vac.vaccinated_on}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Country of Vaccination</dt>
+      <dd>
+        {{vac.country.formatted}}
+        <br><span class="raw">{{vac.country.raw}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Certificate issuer</dt>
+      <dd>
+        {{vac.issuer}}
+      </dd>
+    </dl>
+  </div>
+  <div *ngFor="let test of cert.tests; index as i; count as l;">
+    <h2>
+      <span class="ti ti-test-pipe"></span>
+      <span>Test Certificate</span>
+      <span *ngIf="l > 1">({{i+1}}/{{l}})</span>
+    </h2>
+    <dl>
+      <dt>Disease or agent targeted</dt>
+      <dd>{{test.disease.formatted}}
+        <br><span class="raw">{{test.disease.raw}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Type of Test</dt>
+      <dd>{{test.type.formatted}}
+        <br><span class="raw">{{test.type.raw}}</span>
+      </dd>
+    </dl>
+    <dl *ngIf="test.name !== undefined">
+      <dt>NAA Test Name</dt>
+      <dd>{{test.name}}
+      </dd>
+    </dl>
+    <dl *ngIf="test.manufacturer.raw !== undefined">
+      <dt>RAT Test name and manufacturer</dt>
+      <dd>{{test.manufacturer.formatted}}
+        <br><span class="raw">{{test.manufacturer.raw}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Date/Time of Sample Collection</dt>
+      <dd>
+        {{test.collected_on | date:'medium'}}
+        <br><span class="raw">{{test.collected_on}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Test Result</dt>
+      <dd>{{test.result.formatted}}
+        <br><span class="raw">{{test.result.raw}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Testing center</dt>
+      <dd>
+        {{test.testing_center}}
+      </dd>
+    </dl>
+    <dl>
+      <dt>Country of Test</dt>
+      <dd>
+        {{test.country.formatted}}
+        <br><span class="raw">{{test.country.raw}}</span>
+      </dd>
+    </dl>
+    <dl>
+      <dt>Certificate issuer</dt>
+      <dd>
+        {{test.issuer}}
+      </dd>
+    </dl>
+  </div>
+  <div *ngFor="let rec of cert.recoveries; index as i; count as l;">
       <h2>
         <span class="ti ti-virus-off"></span>
-        Recovery Certificate
+        <span>Recovery Certificate</span>
+        <span *ngIf="l > 1">({{i+1}}/{{l}})</span>
       </h2>
-      <ng-container *ngIf="recovery as rec">
-        <dl>
-          <dt>Disease or agent targeted</dt>
-          <dd>{{rec.disease.formatted}}
-            <br><span class="raw">{{rec.disease.raw}}</span>
-          </dd>
-        </dl>
-        <dl>
-          <dt>Date of first positive NAA test result</dt>
-          <dd>{{rec.first_positive_on}}
-          </dd>
-        </dl>
-        <dl>
-          <dt>Certificate Valid From</dt>
-          <dd>{{rec.valid_from}}
-          </dd>
-        </dl>
-        <dl>
-          <dt>Certificate Valid Until</dt>
-          <dd>{{rec.valid_until}}
-          </dd>
-        </dl>
-        <dl>
-          <dt>Country of Test</dt>
-          <dd>
-            {{rec.country.formatted}}
-            <br><span class="raw">{{rec.country.raw}}</span>
-          </dd>
-        </dl>
-      </ng-container>
-    </ng-container>
+      <dl>
+        <dt>Disease or agent targeted</dt>
+        <dd>{{rec.disease.formatted}}
+          <br><span class="raw">{{rec.disease.raw}}</span>
+        </dd>
+      </dl>
+      <dl>
+        <dt>Date of first positive NAA test result</dt>
+        <dd>
+          {{rec.first_positive_on | date:'fullDate'}}
+          <br><span class="raw">{{rec.first_positive_on}}</span>
+        </dd>
+      </dl>
+      <dl>
+        <dt>Certificate Valid From</dt>
+        <dd>
+          {{rec.valid_from | date:'fullDate'}}
+          <br><span class="raw">{{rec.valid_from}}</span>
+        </dd>
+      </dl>
+      <dl>
+        <dt>Certificate Valid Until</dt>
+        <dd>
+          {{rec.valid_until | date:'fullDate'}}
+          <br><span class="raw">{{rec.valid_until}}</span>
+        </dd>
+      </dl>
+      <dl>
+        <dt>Country of Test</dt>
+        <dd>
+          {{rec.country.formatted}}
+          <br><span class="raw">{{rec.country.raw}}</span>
+        </dd>
+      </dl>
   </div>
-  <h2>
-    <span class="ti ti-certificate"></span>
-    Certificate info
-  </h2>
-  <dl>
-    <dt>Certificate issuer</dt>
-    <dd>{{cert.issuer}}</dd>
-  </dl>
-  <dl>
-    <dt>Unique Certificate Identifier, UVCI</dt>
-    <dd><code>{{cert.id}}</code></dd>
-  </dl>
 </div>
+
