modify slightly the copy text

--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -23,8 +23,8 @@
     while offline</strong>.
   </p>
   <p>
-    The certificates are <strong>stored directly on your device</strong>. No online nor
-    third-party services are required to use the application.</p>
+    The certificates are <strong>safely stored locally on your device</strong>. No contact with
+    any online service is made during use.</p>
 </div>
 <div class="panel">
   <h2>
@@ -111,8 +111,8 @@
     <span>Who are the authors?</span>
   </h2>
   <p>There is only me for now, <a href="https://benjaminchanudet.com">Benjamin Chanudet</a>.
-    I'm a French developer based in Lyon and not totally psyched about using TousAntiCovid,
-    the recommended application that needs Geolocation & Bluetooth permissions, and an exclusion
+    I'm a French developer not totally psyched about using TousAntiCovid,
+    the application that needs Geolocation & Bluetooth permissions, and an exclusion
     to the phone's battery management system only to store a QR Code.</p>
   <p>Icons are from the <a href="https://tabler-icons.io/">Tabler icons</a> project.</p>
 </div>
