add missing space

--- a/src/app/cert/cert-page/cert-page.component.html
+++ b/src/app/cert/cert-page/cert-page.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="cert; else loading">
     <h2>
       <span class="ti ti-qrcode"></span>
-      QR Code
+      <span>QR Code</span>
     </h2>
     <app-qrcode [data]="cert.qr_content"></app-qrcode>
     <br>
