hide the back button for now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="back">
-    <a *ngIf="displayBack$ | async" (click)="GoBack()">
+    <a *ngIf="false" (click)="GoBack()">
       <span class="ti ti-chevron-left"></span>
     </a>
   </div>
