--- a/src/app/content/home/home-page/home-page.component.scss
+++ b/src/app/content/home/home-page/home-page.component.scss
@@ -7,7 +7,7 @@ ul{
   padding-inline-start: 1rem;
 }
 
-.features li, .types li{
+.features li, .types li, .translations li{
   list-style: none;
   margin: 0;
 }
