--- a/src/app/shared/cert-details/cert-details.component.html
+++ b/src/app/shared/cert-details/cert-details.component.html
@@ -1,24 +1,24 @@
 <div *ngIf="cert">
   <h2>
     <span class="ti ti-user"></span>
-    <span>Identity</span>
+    <span appIntl="cert-identity-title">Identity</span>
   </h2>
   <dl>
-    <dt>Forename(s)</dt>
+    <dt appIntl="cert-identity-forenames">Forename(s)</dt>
     <dd>
       {{cert.forenames.formatted}}
       <br><span class="raw">{{cert.forenames.raw}}</span>
     </dd>
   </dl>
   <dl>
-    <dt>Lastname(s)</dt>
+    <dt appIntl="cert-identity-lastnames">Lastname(s)</dt>
     <dd>
       {{cert.lastnames.formatted}}
       <br><span class="raw">{{cert.lastnames.raw}}</span>
     </dd>
   </dl>
   <dl>
-    <dt>Date of Birth</dt>
+    <dt appIntl="cert-identity-birthday">Date of Birth</dt>
     <dd>
       {{cert.date_birth | date:'longDate'}}
       <br><span class="raw">{{cert.date_birth}}</span>
@@ -27,11 +27,11 @@
   <div *ngFor="let vac of cert.vaccines; index as i; count as l;">
     <h2>
       <span class="ti ti-vaccine"></span>
-      <span>Vaccination Certificate</span>
+      <span appIntl="cert-type-vaccine">Vaccination Certificate</span>
       <span *ngIf="l > 1">({{i+1}}/{{l}})</span>
     </h2>
         <dl>
-      <dt>Disease or agent targeted</dt>
+      <dt appIntl='cert-disease'>Disease or agent targeted</dt>
       <dd>{{vac.disease.formatted}}
         <br><span class="raw">{{vac.disease.raw}}</span>
       </dd>
@@ -84,11 +84,11 @@
   <div *ngFor="let test of cert.tests; index as i; count as l;">
     <h2>
       <span class="ti ti-test-pipe"></span>
-      <span>Test Certificate</span>
+      <span appIntl="cert-type-test">Test Certificate</span>
       <span *ngIf="l > 1">({{i+1}}/{{l}})</span>
     </h2>
     <dl>
-      <dt>Disease or agent targeted</dt>
+      <dt appIntl="cert-disease">Disease or agent targeted</dt>
       <dd>{{test.disease.formatted}}
         <br><span class="raw">{{test.disease.raw}}</span>
       </dd>
